объявление для личных кабинетов

--- a/views/school_cabinet.hbs
+++ b/views/school_cabinet.hbs
@@ -41,9 +41,23 @@
                     {{!--                          Приносим свои извинения за возможные неудобства.</p> --}}
 
                     {{!--          <p>Информируем Вас о том, что в период с 08:00 26.04.2023 по 08:00 25.05.2023 платформа будет находиться на этапе тестирования в связи с обновлением оценочных карт. В указанный период возможны проблемы с входом в личный кабинет на портале "Таллам".</p> --}}
-                    <p> Информируем Вас о том, что в период с 08:00 15.05.2023 по 08:00 25.05.2023 будут проводиться
-                        технические работы по модернизации платформы, в связи с этим возможны кратковременные перебои.
+                    <p> Рады сообщить, что в системе "Таллам" теперь доступны личные кабинеты для региональных
+                        методистов. Это нововведение позволяет методистам добавлять свои оценки для ваших учителей.
                     </p>
+                    <p>
+                        Обращаем ваше внимание, что ваши личные оценки, выставленные в рамках внутришкольного
+                        оценивания, останутся недоступными для просмотра методистами.
+                    </p>
+
+                    <p>
+                        Спасибо за внимание и успешной работы в системе "Таллам"!
+                    </p>
+
+
+
+
+
+
 
                 </div>
 
