убрал возможность менять дату при добавлении оценок

--- a/views/card_templates/methodist_school_teacher_card_add_mark_method.hbs
+++ b/views/card_templates/methodist_school_teacher_card_add_mark_method.hbs
@@ -186,7 +186,7 @@
                         <div class="row">
                             <div class="col-md-6 mx-auto">
                                 <div class="row">
-                                    <div class="col-6">
+                                    <div class="col-12">
                                         <div class="input-group mb-3">
                                             <select name="source_id" class="form-select" id="sourse">
                                                 {{!-- <option value="2" id="inside" data-inside="inside"> Внутришкольная
@@ -196,12 +196,12 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class=" col-md-6 ">
+                                    {{!-- <div class=" col-md-6 ">
                                         <div class="input-group mb-3">
                                             <input type="date" class="form-control" placeholder="{{current_date}}"
                                                 name="date_create" min="2019-01-01" required>
                                         </div>
-                                    </div>
+                                    </div> --}}
                                 </div>
                             </div>
                         </div>
