--- a/views/methodist_school_teacher_card_single_full.hbs
+++ b/views/methodist_school_teacher_card_single_full.hbs
@@ -454,7 +454,7 @@
                     <div class="list_action">
                         <div class="list_action__child email-btn">
                             <div class="d-grid gap-2">
-                                <a class="card-btn" href="/school/card/api/send/{{../teacher_id}}/{{id_card}}">Отправить
+                                <a class="card-btn" href="#">Отправить
                                     на электронный адрес учителя</a>
                             </div>
 
