first_version_from_2025

--- a/views/methodists_in_admin/statistic/admin_methodist_form2.hbs
+++ b/views/methodists_in_admin/statistic/admin_methodist_form2.hbs
@@ -157,8 +157,8 @@
                     <td>{{increment @index}}</td>
                     <td>{{surname}} {{firstname}} {{patronymic}}</td>
                     <td>{{title_position}}</td>
-                    <td>{{title_discipline}}</td>
-                    <td>{{school_count}}</td>
+                    <td>{{disciplines}}</td>
+                    <td>{{schools_number}}</td>
                     <td>{{teacher_count}}</td>
                     <td>{{record_count}}</td>
 
@@ -170,7 +170,7 @@
         </section>
         <!-- END BLOCK-->
 
-        <button id="myBtn">Сформировать</button>
+        <button id="myBtn">Сформировать1</button>
     </div>
 
 
