--- a/views/school_cabinet.hbs
+++ b/views/school_cabinet.hbs
@@ -36,7 +36,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="info_block text-align-center">
-                    <h3>Уважаемые пользователи портала!</h3>
+                    {{!-- <h3>Уважаемые пользователи портала!</h3>
                     {{!--          <p>Информируем Вас о том, что в период с 08:00 26.04.2023 по 08:00 05.0.2023  будут проводиться регламентные работы с целью обновления оценочных карт. В указанный период возможны проблемы с входом в личный кабинет на портале "Таллам". --}}
                     {{!--                          Приносим свои извинения за возможные неудобства.</p> --}}
 
@@ -51,7 +51,7 @@
 
                     <p>
                         Спасибо за внимание и успешной работы в системе "Таллам"!
-                    </p>
+                    </p> --}}
 
 
 
